# innit

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/actions/: mod.rs
src/actions/command/: mod.rs  run.rs
src/actions/file/: download.rs  link.rs  mod.rs
src/actions/github/: mod.rs  repo.rs
src/actions/package/: install.rs  mod.rs
