[package]
name = "innit"
version = "0.1.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
description = "Innit annoying when you have to setup a new PC?"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/The-Noah/innit"
repository = "https://github.com/The-Noah/innit"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
